acm/gatekeeper/required-annotations/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredAnnotations
metadata:
  name: all-must-have-certain-set-of-annotations
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["ServiceAccount"]
  parameters:
    message: "All service accounts must have `ownerName` and `ownerEmail` annotations."
    annotations:
      - key: ownerName
        # Matches a name
        allowedRegex: ^([A-Za-z ]+)
      - key: ownerEmail
        # Matches email address
        allowedRegex: ^[a-z0-9-\.]+@([a-z0-9-]+\.)+[a-z0-9-]{2,4}
